# wiggleroom

./: .gitignore  BUG_REPORT.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  Justfile  Makefile  README.md  plugin.json
.claude/.claude-plugin/: plugin.json
.claude/agents/: architect.md  builder.md  dev-agent.md  dev.md  faust-dev.md  judge.md  verifier.md
.claude/skills/module-dev/: SKILL.md
.claude/skills/new-module/: SKILL.md
.github/workflows/: build.yml  test.yml
cmake/: Faust.cmake  RackSDK.cmake  Toolchain-Linux.cmake  Toolchain-Mac.cmake  Toolchain-Mingw64.cmake
docs/: Faust Emulation of VHIKK X Module.md  README.md  RELEASE_STRATEGY.md
docs/ci/: agents.md  pipeline.md
docs/developer/: adding-modules.md  architecture.md  faust-guide.md  getting-started.md  testing.md
docs/modules/: BigReverb.md  ChaosFlute.md  Intersect.md  MoogLPF.md  SolinaEnsemble.md  SpectralResonator.md  SuperOsc.md  TheArchitect.md  TriPhaseEnsemble.md
docs/specs/: acid9voice.md  analog-drums.md  euclogic.md
docs/user/modules/: ACID9Seq.md  ACID9Voice.md  AnalogDrums.md  ChaosPad.md  Cycloid.md  EucBank.md  EucMix.md  EucSeq.md  GravityClock.md  InfiniteFolder.md  LadderLPF.md  Linkage.md  LogicMangler.md  Matter.md  ModalBell.md  NutShaker.md  OctoLFO.md  PhysicalChoir.md  PluckedString.md  PreFlightClock.md  SaturationEcho.md  SpaceCello.md  SpectraHenge.md  TetanusCoil.md  TheAbyss.md  TheCauldron.md  VektorX.md  XFade.md  index.md
faust/: vcvrack.cpp
scripts/: ci_summary.py  faceplate_prompt.md  generate_faceplate.py  validate_manifest.py  verify_manifest.py
specs/: PreFlightClock.md  SpectraHenge.md  TheWeaver.md  XFade.md  _TEMPLATE.md
src/: plugin.cpp
src/common/: DSP.hpp  FaustModule.hpp  ImagePanel.hpp  ModuleTestConfig.hpp
src/common/euclogic/: EuclideanEngine.hpp  ExpanderMessage.hpp  ProbabilityGate.hpp  TruthTable.hpp
src/modules/ACID9Seq/: ACID9Seq.cpp  CMakeLists.txt  ExpressionEngine.hpp  GearBuffer.hpp  InterferenceEngine.hpp  LogicEngine.hpp  test_config.json
src/modules/ACID9Voice/: ACID9Voice.cpp  CMakeLists.txt  acid9voice.dsp  test_config.json
src/modules/ACID9Voice/lib/: acid_delay.lib  acid_filter.lib  morph_osc.lib  tri_core_osc.lib
src/modules/AnalogDrums/: AnalogDrums.cpp  CMakeLists.txt  analog_drums.dsp  analog_drums_lib.lib  test_config.json
src/modules/BigReverb/: BigReverb.cpp  CMakeLists.txt  big_reverb.dsp  test_config.json
src/modules/ChaosFlute/: CMakeLists.txt  ChaosFlute.cpp  chaos_flute.dsp  test_config.json
src/modules/ChaosPad/: CMakeLists.txt  ChaosPad.cpp  chaos_pad.dsp  test_config.json
src/modules/Cycloid/: CMakeLists.txt  Cycloid.cpp  test_config.json
src/modules/EucBank/: CMakeLists.txt  EucBank.cpp
src/modules/EucMix/: CMakeLists.txt  EucMix.cpp
src/modules/EucSeq/: CMakeLists.txt  EucSeq.cpp
src/modules/Euclogic/: CMakeLists.txt  EuclideanEngine.hpp  Euclogic.cpp  EuclogicCore.hpp  ProbabilityGate.hpp  TruthTable.hpp  test_config.json
src/modules/Euclogic2/: CMakeLists.txt  Euclogic2.cpp  test_config.json
src/modules/Euclogic3/: CMakeLists.txt  Euclogic3.cpp  test_config.json
src/modules/GravityClock/: CMakeLists.txt  GravityClock.cpp  test_config.json
src/modules/InfiniteFolder/: CMakeLists.txt  InfiniteFolder.cpp  infinite_folder.dsp  test_config.json
src/modules/Intersect/: CMakeLists.txt  Intersect.cpp  test_config.json
src/modules/LadderLPF/: CMakeLists.txt  LadderLPF.cpp  ladder_lpf.dsp  test_config.json
src/modules/Linkage/: CMakeLists.txt  Linkage.cpp  linkage.dsp  test_config.json
src/modules/LogicMangler/: CMakeLists.txt  LogicMangler.cpp
src/modules/Matter/: CMakeLists.txt  Matter.cpp  matter.dsp  test_config.json
src/modules/ModalBell/: CMakeLists.txt  ModalBell.cpp  modal_bell.dsp  test_config.json
src/modules/MoogLPF/: CMakeLists.txt  MoogLPF.cpp  moog_lpf.dsp  test_config.json
src/modules/NutShaker/: CMakeLists.txt  NutShaker.cpp  nutshaker.dsp  test_config.json
src/modules/OctoLFO/: CMakeLists.txt  OctoLFO.cpp  test_config.json
src/modules/PhysicalChoir/: CMakeLists.txt  PhysicalChoir.cpp  physical_choir.dsp  test_config.json
src/modules/PixelProbe/: CMakeLists.txt  PixelProbe.cpp
src/modules/PluckedString/: CMakeLists.txt  PluckedString.cpp  plucked_string.dsp  test_config.json
src/modules/PreFlightClock/: CMakeLists.txt  PreFlightClock.cpp  test_config.json
src/modules/SaturationEcho/: CMakeLists.txt  SaturationEcho.cpp  saturation_echo.dsp  test_config.json
src/modules/SolinaEnsemble/: CMakeLists.txt  SolinaEnsemble.cpp  solina_ensemble.dsp  test_config.json
src/modules/SpaceCello/: CMakeLists.txt  SpaceCello.cpp  space_cello.dsp  test_config.json
src/modules/SuperOsc/: CMakeLists.txt  (+2 more)
src/modules/TheAbyss/: CMakeLists.txt  TheAbyss.cpp  test_config.json  the_abyss.dsp
src/modules/TriPhaseEnsemble/: CMakeLists.txt  TriPhaseEnsemble.cpp  test_config.json  tri_phase_ensemble.dsp
test/: AbstractDSP.hpp  CMakeLists.txt  README.md  __init__.py  ai_audio_analysis.py  analyze_audio.py  analyze_param_ranges.py  analyze_sensitivity.py  audio_quality.py  ci_config.json  dsp_wrappers.cpp  euclogic_test.cpp  faust_render.cpp  generate_param_grid.py  generate_report.py  generate_showcase_report.py  generate_unified_report.py  octolfo_test.cpp  requirements.txt  run_tests.py  test_audio_quality_unit.py  test_euclogic.py  test_framework.py  test_manifest_validation.py  test_manifest_verification.py  test_octolfo.py  test_regressions.py  test_report_generation.py  test_submodules.py  test_truth_table.cpp  test_utils_unit.py  utils.py
test/agents/: __init__.py  auto_fixer.py  faust_dev_agent.md  judge_agent.py  orchestrator.py  verifier_agent.py
test/faust_submodules/: chaos_flute_blower_test.dsp  chaos_flute_envelope_test.dsp  chaos_flute_fixed.dsp
test/output/wav/PluckedString/: param_metadata.json
test/sensitivity/ChaosFlute/: ChaosFlute_sensitivity.html
test/tools/: __init__.py  judge.py  orchestrator.py  verifier.py
tests/: test_big_reverb  test_big_reverb.cpp  test_faust_output.py  test_spectral_resonator  test_spectral_resonator.cpp
(+51 files in other folders)
